--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
   },
   "permissions": [],
   "icons": {
-    "16": "images/icon16.ico",
-    "48": "images/icon48.ico",
-    "128": "images/icon128.ico"
+    "16": "images/robl.ico",
+    "48": "images/robl2.ico",
+    "128": "images/robl3.ico"
   }
 }
